# snagradar

./: .gitignore  LICENSE  README.md  main.py  nature.py  requirements.txt
snagradar/: README.md  __init__.py  challenge.py  constants.py  evs_calculator.py  fileutil.py  keys.py  nature.py  ocr_parser.py  pokemon.py  pokemonparser.py  process.py  processocrspace.py  pyproject.toml  run.sh  snag_flask.py  snagexception.py  speedle.db  speedle.py  speedle_db.py  speedlemon.py  test.py  wsgi.py
snagradar/speedle/: ma-speed-list  ma-speed-list.csv
snagradar/speedle/docs/: README.txt
snagradar/static/css/: style.css
snagradar/static/js/: snagradar.js  speedle.js
snagradar/templates/: daily.html  footer.html  howitworks.html  index.html  pokemon_dropdown.html  roster.html  scan.html  snagradar.html  speedle.html
