[project]
name = "snagradar"
version = "0.1.0"
description = "Flask app for scanning Pokemon stats"
authors = [
    {name = "Zak",email = "zak.turchansky@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autocommand (>=2.2.2,<3.0.0)",
    "backports-tarfile (>=1.2.0,<2.0.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "charset-normalizer (>=3.4.1,<4.0.0)",
    "idna (>=3.10,<4.0)",
    "importlib-metadata (>=8.6.1,<9.0.0)",
    "importlib-resources (>=6.5.2,<7.0.0)",
    "inflect (>=7.5.0,<8.0.0)",
    "jaraco-collections (>=5.1.0,<6.0.0)",
    "jaraco-context (>=6.0.1,<7.0.0)",
    "jaraco-functools (>=4.1.0,<5.0.0)",
    "jaraco-text (>=4.0.0,<5.0.0)",
    "more-itertools (>=10.6.0,<11.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "ocrspace (>=2.3.0,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "packaging (>=24.2,<25.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "platformdirs (>=4.3.7,<5.0.0)",
    "pokebase (>=1.4.1,<2.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "typeguard (>=4.4.2,<5.0.0)",
    "typing-extensions (>=4.13.0,<5.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "zipp (>=3.21.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

